<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView

        android:layout_margin="@dimen/l_i_e_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/l_i_e_c">
            <ImageView
                android:id="@+id/imgElement"
                android:layout_width="@dimen/l_i_e_w_120"
                android:layout_height="@dimen/l_i_e_h_120"
                android:layout_marginStart="@dimen/l_i_e_m_10"
                android:layout_marginTop="@dimen/l_i_e_mt_10"
                android:layout_marginBottom="@dimen/l_i_e_mb_10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/lie_ms10"
                android:layout_marginTop="@dimen/lie_mt10"
                android:text="@string/element_ad"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/imgElement"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/textIsim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lie__mt_10"
                android:text="@string/hidrojen"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lie2_mt10"
                android:text="@string/atom_numaras"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/textIsim"
                app:layout_constraintTop_toBottomOf="@+id/textIsim" />
            <TextView
                android:id="@+id/textKutle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lie3_mt10"
                android:text="@string/_1000mg"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lie4_mt10"
                android:text="@string/sembol"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textKutle"
                app:layout_constraintTop_toBottomOf="@+id/textKutle" />
            <TextView
                android:id="@+id/textSembol"
                android:layout_width="@dimen/lie_w0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lie5_mt5"
                android:layout_marginEnd="@dimen/lie5_m10"
                android:layout_marginBottom="@dimen/lie5_mb20"
                android:text="@string/h"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
